cmake_minimum_required(VERSION 3.12)
project(untitled1)

set(CMAKE_CXX_STANDARD 14)

add_executable(InsertionSort SearchAndSort/InsertionSort.cpp)
add_executable(SelectionSort SearchAndSort/SelectionSort.cpp)
add_executable(BubbleSort SearchAndSort/BubbleSort.cpp)
add_executable(MergeSort SearchAndSort/MergeSort.cpp)
add_executable(QuickSort SearchAndSort/QuickSort.cpp)
add_executable(ShortestCommonSuperstring DynamicProgramming/ShortestCommonSuperstring.cpp)
add_executable(CountWays DynamicProgramming/CountWays.cpp)
add_executable(LCS3 DynamicProgramming/LCS3.cpp)
add_executable(DiceThrow DynamicProgramming/DiceThrow.cpp)
add_executable(MaxSumIS DynamicProgramming/MaxSumIS.cpp)
add_executable(MSPTriangle DynamicProgramming/MSPTriangle.cpp)
add_executable(LobbNumber DynamicProgramming/LobbNumber.cpp)
add_executable(WordBreakProblem DynamicProgramming/WordBreakProblem.cpp)
add_executable(PartitionProblem DynamicProgramming/PartitionProblem.cpp)
add_executable(LPS DynamicProgramming/LPS.cpp)
add_executable(CountPaths DynamicProgramming/Maze.cpp)